// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="sc-bZQynM hjxBKu sc-EHOje FXgKN sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-gzVnrw gRPBNm"
  />
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="sc-bZQynM hjxBKu sc-EHOje FXgKN sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-htoDjs kcKEfw sc-dnqmqq IcJuo"
  />
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-EHOje FXgKN sc-ifAKCX jUaWfj sc-bxivhb kvsYTM sc-htpNat Opked sc-bwzfXH fALjbt sc-bdVaJa bXkERd"
  type="button"
>
  ButtonValue
</button>
`;
